Styling fix for Join Us having tiny text on mobile

--- a/src/style/MyPage.less
+++ b/src/style/MyPage.less
@@ -180,9 +180,7 @@ a.btn.btn-lg.btn-default.btn-gl.discrete-login {
 
 	// hack to add some padding and proper size for mobile between sign in button and hero image
 	.btn-gl {
-		margin-bottom: 5vmin;
-		font-size: 2.5vmin;
-		margin-top: 4vmin;
+		margin-top: 2rem;
 	}
 
 	// appears in the top-right of the big red welcome card
